[mirotalkwebrtc] - add allowedRooms logic
