# backend/models/users.js
@@ -5,6 +5,7 @@ const mongoose = require('mongoose');
 const userSchema = new mongoose.Schema({
     role: { type: String, default: 'guest' },
     allow: { type: Array, default: ['ALL'] },
+    allowedRooms: { type: Array, default: ['*'] },
     email: { type: String, index: { unique: true } },
     username: { type: String, index: { unique: false } },
     password: { type: String },
